--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,8 @@ html {
 
 body {
   margin: 0;
+  padding: 0 0 1rem;
+  background-color: #f5f2f0;
 }
 
 img {
@@ -20,16 +22,18 @@ img {
 }
 
 main h1 {
-  font-family: 'Denk One', sans-serif;
+  font-family: "Denk One", sans-serif;
   color: #623b0c;
-  padding: 1rem;
+  padding: 1rem 1rem 1.5rem;
+  margin: 0;
 }
 
 main ol h2 {
-  font-family: 'Denk One', sans-serif;
+  font-family: "Denk One", sans-serif;
   color: #623b0c;
-  margin: 1.5rem;
+  margin: 0 0 1.5rem;
 }
+
 main ol li {
   list-style-type: none;
   border-style: solid;
@@ -41,11 +45,12 @@ main ol li {
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: space-between;
-  padding: .5em .75em .6em;
+  padding: 1em;
 }
+
 main ol a {
   text-decoration: none;
-  color: #f5f2f0;
+  color: #fff;
   background-color: #623b0c;
   padding: .5em .75em .6em;
   border-radius: 8px;
@@ -55,10 +60,11 @@ main ol {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 1rem;
-  padding: 1rem;
-  margin: 0;
+  padding: 0;
+  margin: 0 1rem;
 }
 
 main ol p {
   flex-grow: 1;
+  padding: .6rem 0;
 }
